--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <div class="container-fluid banner text-center divprin" id="menu">
       <h2>Boo</h2>
 		<h3>GRITA, CORRE Y JUEGA</h3>
-      <button type="button" class="button">PLAY!</button>
+      <a role= "button" class="btn btn-primary btn-lg" href="boo.alexaportocarre.repl.co" target="_blank">
+	      PLAY!
+	</a>
     </div>
 
 
