--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             En el año 2005 empezamos a incursionar dentro del mundo de los videojuegos con Belsebú.
             Para el 2015, ya éramos la empresa de videojuegos más grande de todo América.</p></div>
         <div class="col-12 col-lg-6">
-          <img src="IMG/as_01.png" class="imagenmenu"/>
+          <img src="img/as_01.png" class="imagenmenu"/>
         </div>
       </div>
     </div>
@@ -76,7 +76,7 @@
           <p>El juego más vendido del 2020, ahora remasterizado.
             Belcebú: El regreso, es un juego que es parte de la saga original de la empresa.</p></div>
         <div class="col-12 col-lg-6">
-          <img src="IMG/as_02.png" class="imagenmenu"/>
+          <img src="img/as_02.png" class="imagenmenu"/>
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@
     <div class="container-fluid banner text-center divrojo">
       <div class="row">
         <div class="col-12 col-lg-6">
-          <img src="IMG/as_03.png" class="imagenmenu"/> </div>
+          <img src="img/as_03.png" class="imagenmenu"/> </div>
         <div class="col-12 col-lg-6">
           <h1>BOOGIEMAN</h1>
           <p>Boogieman está de regreso, pero ahora remasterizado.
@@ -99,7 +99,7 @@
           <h1>BOO</h1>
           <p>Juega aquí el nuevo juego de suspenso.</p></div>
         <div class="col-12 col-lg-6">
-          <img src="IMG/as_04.png" class="imagenmenu"/>
+          <img src="img/as_04.png" class="imagenmenu"/>
         </div>
       </div>
     </div>
@@ -110,7 +110,7 @@
           <h1>GAMEPLAYS</h1>
           <p>Puedes revisar los gameplays que varies youtubers han hecho de nuestros videojuegos.</p></div>
         <div class="col-12 col-lg-6">
-          <img src="IMG/as_05.png" class="imagenmenu"/>
+          <img src="img/as_05.png" class="imagenmenu"/>
         </div>
       </div>
     </div>
@@ -120,7 +120,7 @@
 	  <div class="container-fluid banner text-center divama">
       <div class="row">
 		  <div class="col-12 col-lg-6">
-          <img src="IMG/as_06.png" class="imagenmenu"/>
+          <img src="img/as_06.png" class="imagenmenu"/>
         </div>
         <div class="col-12 col-lg-6">
           <h1>GAMEPLAYS</h1>
@@ -139,7 +139,7 @@
             Nos encanta escucharte.
             ¿O será que estamos detrás tuyo?</p></div>
         <div class="col-12 col-lg-6">
-          <img src="IMG/as_07.png" class="imagenmenu"/>
+          <img src="img/as_07.png" class="imagenmenu"/>
         </div>
       </div>
     </div>
