--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h2>Boo</h2>
 		<h3>GRITA, CORRE Y JUEGA</h3>
       <a role= "button" class="btn btn-primary btn-lg" href="boo.alexaportocarre.repl.co" target="_blank">
-	      PLAY!
+	      NO DEJES QUE TE ATRAPEN!
 	</a>
     </div>
 
