--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container-fluid banner text-center divprin" id="menu">
       <h2>Boo</h2>
 		<h3>GRITA, CORRE Y JUEGA</h3>
-      <a role= "button" class="btn btn-primary btn-lg" href="boo.alexaportocarre.repl.co" target="_blank">
+      <a role= "button" class="btn btn-primary btn-lg" href="https://boo--alexaportocarre.repl.co/" target="_blank">
 	      NO DEJES QUE TE ATRAPEN!
 	</a>
     </div>
